# EngineRenderer

./: CMakeLists.txt  EngineRenderer.cbp
src/: Engine.cpp  Engine.h  FileLoader.cpp  FileLoader.h  GraphicsLibrary.cpp  GraphicsLibrary.h  Material.cpp  Material.h  ObjectGL.cpp  ObjectGL.h  Shader.cpp  Shader.h  Texture2D.cpp  Texture2D.h  TmpObject.cpp  TmpObject.h  Utilities.cpp  Utilities.h  gl_canvas2d.h  main.cpp
src/Backend/: GraphicsLibrary.cpp  GraphicsLibrary.h  ObjectGL.cpp  ObjectGL.h  Shader.cpp  Shader.h  Texture2D.cpp  Texture2D.h
src/Base/: CanvasObject.cpp  CanvasObject.h
src/Base/3D/: Object3D.cpp  Object3D.h  ObjectFace.cpp  ObjectFace.h  Transform.cpp  Transform.h
src/Base/Interfaces/: ITransformable.h
src/Base3DObjects/: Cylinder.cpp  Cylinder.h  ModelLoader.cpp  ModelLoader.h  OpenEndedCylinder.cpp  OpenEndedCylinder.h
src/Bitmap/: Bitmap.cpp  Bitmap.h
src/Camera/: Camera.cpp  Camera.h  CameraMovement.cpp  CameraMovement.h
src/FileManagers/Bitmap/: Bitmap.cpp  Bitmap.h
src/Managers/: GlobalManager.cpp  GlobalManager.h
src/Resources/Shaders/: DefaultFragment.glsl  DefaultVertex.glsl
src/Resources/Shaders/Goraud/: GoraudFragment.glsl  GoraudVertex.glsl
src/Vectors/: Matrix.h  Vector2.h  Vector3.h  Vector4.h
